[gd_scene load_steps=15 format=2]

[ext_resource path="res://asset/perahu kajang lako.png" type="Texture" id=1]
[ext_resource path="res://asset/button/Button_cerita.png" type="Texture" id=2]
[ext_resource path="res://asset/JUDUL copy 2.png" type="Texture" id=3]
[ext_resource path="res://asset/button/Button_permainan1.png" type="Texture" id=4]
[ext_resource path="res://asset/Scene_awal_game.png" type="Texture" id=5]
[ext_resource path="res://asset/Tak berjudul60_20210716074801.png" type="Texture" id=6]
[ext_resource path="res://MainMenu.gd" type="Script" id=7]
[ext_resource path="res://asset/audio/UI/Judul.wav" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.647059, 0.67451, 0.764706, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.341176 )
shadow_size = 5
shadow_offset = Vector2( 5, 5 )

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="Theme" id=4]

[sub_resource type="Animation" id=5]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("JUDUL copy 2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 2.5, 3.7, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 344, 136 ), Vector2( 380, 160 ), Vector2( 392, 100 ), Vector2( 350, 112 ), Vector2( 330, 140 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tak berjudul60_20210716074801:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 708, 424 ), Vector2( 730, 440 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 383.011, 122.605 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 72.0
margin_top = 384.0
margin_right = 376.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 3 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Panel3" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 72.0
margin_top = 536.0
margin_right = 400.0
margin_bottom = 680.0
theme = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tak berjudul60_20210716074801" type="Sprite" parent="."]
position = Vector2( 708, 424 )
scale = Vector2( 0.227778, 0.2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="perahu kajang lako" type="Sprite" parent="Tak berjudul60_20210716074801"]
position = Vector2( 2019.51, -105 )
scale = Vector2( 6.95414, 5.39 )
texture = ExtResource( 1 )
flip_h = true

[node name="JUDUL copy 2" type="Sprite" parent="."]
position = Vector2( 344, 136 )
scale = Vector2( 0.546, 0.522 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "judul"
anims/judul = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 342.876, 121.973 )
scale = Vector2( 0.546, 0.522 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -56.5494, 72.8486 )
shape = SubResource( 6 )

[node name="judul" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="pressed" from="Panel2/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Panel3/Button" to="." method="_on_Button_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="finished" from="judul" to="." method="_on_judul_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
